Alterado para java 11